<resources>
    <string name="app_name">BopPong_dev</string>
    <string name="playerSelect">How many players ?</string>
    <string name="startButton">Play</string>
    <string name="userNameDefault">PlayerX</string>
    <string name="userSongSubmitted">Submitted</string>
    <string name="userSongUnsubmitted">Unsubmitted</string>
    <string name="saveChanges">Save changes</string>
    <string name="editName">edit name</string>
    <string name="selectSong">select song</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="begin">Begin</string>
    <string name="nameHidden">Who picked it ?</string>
    <string name="loading">...</string>
    <string name="popup1">quit ?</string>
    <string name="popup2">discard ?</string>
    <string name="quit">yes</string>
    <string name="cont">no</string>
    <string name="settings">settings</string>

    <string-array name="prompts">
        <item>the tear jerker</item>
        <item>the gym pump</item>
        <item>mom\'s favorite</item>
        <item>a guilty pleasure</item>
        <item>the date night move</item>
        <item>utter crap</item>
        <item>the hipster cut</item>
        <item>this one\'s deep</item>
        <item>play this at my funeral</item>
        <item>the mood booster</item>
        <item>the heartbreak healer</item>
        <item>a karaoke favorite</item>
        <item>my ex\'s favorite</item>
        <item>this was cool when I was 10</item>
        <item>make the DJ play this</item>
    </string-array>
    <string name="startGame">Start round ?</string>
</resources>