<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/BPred"
    android:onClick="onSaveChanges"
    tools:context=".UserEditActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#C04953"
            app:cardCornerRadius="250dp">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="0dp"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/selectedPlayerImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:onClick="goToCamera"
                    android:paddingTop="0dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/testprofile1" />


            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/playerNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="center"
            android:text="TextView"
            android:textSize="48sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout"
            style="@style/MyTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="@font/raleway"
                android:hint="@string/editName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextDropDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/songSubEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="@font/raleway"
                android:hint="@string/selectSong" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveChangesButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/BPred"
        android:fontFamily="@font/inter_black"
        android:onClick="onSaveChanges"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/saveChanges"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-51dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

